# flyre-master

./: README.md
flyre-master/: flyre.py  pyproject.toml
flyre-master/src/assets/: settings.json
