[project]
name = "Flyre"
version = "1.0.0"
description = "A pixel art shooter with a skill tree."
authors = [{ name = "ddorn", email = "diego.dorn@free.fr" }]
requires-python = ">=3.8"
license = "MIT"
dependencies = ["pygame>=2.0.1,<3"]

[dependency-groups]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
